--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="bg">
 
 		 <nav>
-			  <img src="logo.png" alt="musicadda" width="300px"></img>
+			  <img src="logo.PNG" alt="musicadda" width="300px"></img>
 		 </nav>
 		 <div class ="audio">
 			 <img class="imggg"src="ekpalkajeena.jpg" alt="ekpalkajeena" width="350px" height="350px">
