--- a/index6.html
+++ b/index6.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="bg">
 		<nav>
-			 <img src="logo.png" alt="musicadda" width="300px"></img>
+			 <img src="logo.PNG" alt="musicadda" width="300px"></img>
 		</nav>
 		<div class ="audio">
 			<img class="imggg"src="jaaduterinazar.jpg" alt="jaaduterinazar" width="350px" height="350px">
