--- a/index15.html
+++ b/index15.html
@@ -12,7 +12,7 @@
 			 <img src="logo.PNG" alt="musicadda" width="300px"></img>
 		</nav>
 		<div class ="audio">
-			<img class="imggg"src="Kabira.jpg" alt="Kabira" width="350px" height="350px">
+			<img class="imggg"src="kabira.jpg" alt="Kabira" width="350px" height="350px">
 			 <audio class="conts"controls src="new/Kabira.mp3" autoplay></audio>
           <span></span>
 					<span></span>
