--- a/index20.html
+++ b/index20.html
@@ -12,7 +12,7 @@
 			 <img src="logo.PNG" alt="musicadda" width="300px"></img>
 		</nav>
 		<div class ="audio">
-			<img class="imggg"src="dhadkan.jpg" alt="dhadkan" width="350px" height="350px">
+			<img class="imggg"src="Dhadkan.jpg" alt="dhadkan" width="350px" height="350px">
 			 <audio class="conts"controls src="new/TumDilKiDhadkanMein.mp3" autoplay></audio>
           <span></span>
 					<span></span>
